# inferInstance

./: ChangeLog.md  LICENSE  README.md  inferInstance.cabal
Data/: InferInstance.hs
article/: Fully-functional heterogeneous lists.en.wiki.txt  Fully-functional heterogeneous lists.ru.wiki.txt
example/: Declarations.hs  Example.hs
test/: Circle.hs  Main.hs  Rectangle.hs  TestData.hs  TestInferInstance.hs  TestUsingInstance.hs  Triangle.hs
test/Base/: Clickable.hs  Renderable.hs  Serializable.hs
